--- a/weapp/apps/customerized_apps/evaluate/templates/webapp/m_my_evaluates.html
+++ b/weapp/apps/customerized_apps/evaluate/templates/webapp/m_my_evaluates.html
@@ -1,6 +1,12 @@
 {% extends "apps_base.html" %}
 {% block css %}
 <style type="text/css">
+    html,body{
+        height: 100%;
+    }
+    .xui-productReviewListPage {
+        height: 100%;
+    }
     .xui-productReviewListPage .xui-title{
         text-align: center;
         line-height: 35px;
@@ -60,7 +66,7 @@
     .xui-productReviewListPage .xui-emptyReview .xui-emptyImg{
         width: 136px;
         height: 130px;
-        background: url(/static/img/mobile/usercenter/empty.png) no-repeat;
+        background: url(/static_v2/img/empty.png) no-repeat;
         -webkit-background-size: 380px 152px;
         background-size: 380px 152px;
         background-position: -136px 0;
@@ -71,7 +77,9 @@
 {% block content-panel %}
 <div class="xui-productReviewListPage pb20">
     <div class="xui-title pr">
-        <i data-ui-role="goBack"></i>
+        <a class="xa-goBack xui-returnPrev pa">
+            <i data-ui-role="goBack"></i>
+        </a>
         <span class="em9">我的评价</span>
     </div>
     {% if reviewed_products.length > 0 %}
@@ -79,11 +87,11 @@
     <div class="xui-productReview p10 mb10">
         <div class="xui-product disT mb15 w">
             <div class="xui-productImg disTc">
-                {% if review.product.thumbnails_url|truncatechars(15) == 'http://weappimg...'%}
+                {% if review.product.thumbnails_url|truncatechars:15 == 'http://weappimg...'%}
                     <img src="{{review.product.thumbnails_url}}!60" full-src="{{review.product.thumbnails_url}}" >
                 {% else %}
                     <img src="{{review.product.thumbnails_url}}" >
-                {% endif%}
+                {% endif %}
 
             </div>
             <div class="productInfo disTc vt pl10">
@@ -96,9 +104,12 @@
                             {% endfor %}
                         {% endif %}
                     </span>
-                    <span class="em7 c9 fr">{{review.created_at|date("Y-m-d")}}</span>
+                    <span class="em7 c9 fr">{{review.created_at|date:"Y-m-d"}}</span>
                 </div>
             </div>
+        </div>
+        <div class="em10">
+            商家留言：
         </div>
         <div class="xui-productReviewText c65 em8">
             {{review.review_detail}}
@@ -107,11 +118,11 @@
         {% if review.reviewed_product_pictures.length > 0 %}
         <div class="xui-uploadImg">
             {% for picture in review.reviewed_product_pictures%}
-            {% if picture.att_url|truncatechars(15) == 'http://weappimg...'%}
+            {% if picture.att_url|truncatechars:15 == 'http://weappimg...'%}
                 <img src="{{picture.att_url}}!60" full-src="{{picture.att_url}}">
             {% else %}
                 <img src="{{picture.att_url}}">
-            {% endif%}
+            {% endif %}
 
             {% endfor %}
         </div>
