--- a/weapp/apps/customerized_apps/evaluate/templates/editor/evaluates.html
+++ b/weapp/apps/customerized_apps/evaluate/templates/editor/evaluates.html
@@ -26,16 +26,15 @@ a{
 }
 .xui-evaluate-modalLef{
     width:50%;
-    box-sizing:border-box;
     border-right:1px solid #e1e1e1;
     padding-bottom: 20px;
+    margin-bottom: 10px;
 }
 .xui-evaluate-comment{
     display:inline-block;width:330px;
 }
 .xui-evaluate-modalRig{
-    width:50%;
-    box-sizing:border-box;
+    width: 50%;
     padding-left:10px;
 }
 .xui-evalute-btnGroups{
@@ -56,7 +55,6 @@ a{
     line-height:50px;
 }
 .xui-evaluate-table{
-    margin-top: 20px;
     margin-bottom: 0;
 }
 .xui-evaluate-table > tbody> tr > td{
