--- a/weapp/apps/customerized_apps/evaluate/templates/webapp/m_evaluate_success.html
+++ b/weapp/apps/customerized_apps/evaluate/templates/webapp/m_evaluate_success.html
@@ -1,6 +1,9 @@
 {% extends "apps_base.html" %}
 {% block css %}
 <style type="text/css">
+    html,body{
+        height: 100%;
+    }
     .xui-productReviewSuccessedPage{
         background: #fff;
         height: 100%;
