--- a/weapp/termite/static/termite_js/app/component/appkit/evaluatedescription/evaluatedescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/evaluatedescription/evaluatedescription.html
@@ -1,6 +1,7 @@
 {% load workbench_filter %}
 
 {% ifequal component.type 'appkit.evaluatedescription' %}
+    <!--R-->
     <div id="dj_request_owner_id" class="wui-evaluate-container wa-evaluate-container pb10">
         <div class="wui-i-header">
             <div class="wui-i-product-info disT mb15 w">
@@ -56,16 +57,16 @@
                     </div>
                 </div>
             </div>
-            <div class="wui-productPhoto mt10 wui-i-upload-img">
+            <!--<div class="wui-productPhoto mt10 wui-i-upload-img">
                <div class="wui-addPhoto wa-addPhoto mb10 fl pr">
-                    <input name="imgFile123" data-ui-role="uploadImage" type="file" style="opacity:0;top:0;left:0;width:45px;height:45px;" class="pa" multiple>              
+                    <input name="imgFile123" data-ui-role="uploadImage" type="file" style="opacity:0;top:0;left:0;width:45px;height:45px;" class="pa" multiple>
                 </div>
                 <div class="xui-deletePhoto xa-deletePhoto" style="display:none;">
                 </div>
-                <span class="cRed em95 none xa-finishEdit xui-finishEdit ml10">完成</span>                
+                <span class="cRed em95 none xa-finishEdit xui-finishEdit ml10">完成</span>
                 <span class="em75 wa-text wui-text">上传图片</span>
-            </div>   
-            <div class="wui-separate"></div>     
+            </div>   -->
+            <div class="wui-separate"></div>
             <div class="wui-serviceReview mb20">
                 <h2 class="c3 em9">
                     服务评分
@@ -112,4 +113,5 @@
             </div>
         </div>
     </div>
+    <!--R-->
 {% endifequal %}
