update template and style

--- a/weapp/apps/customerized_apps/evaluate/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/evaluate/templates/editor/workbench.html
@@ -96,7 +96,7 @@
         "task": "weizoom-load-termite-components"
       }
     -->
-  {{ '["appkit.page", "appkit.evaluatedescription", "appkit.componentadder", "appkit.qa", "appkit.selection", "appkit.submitbutton", "appkit.textlist"]'|load_termite_components|safe }}
+  {{ '["appkit.page", "appkit.evaluatedescription", "appkit.componentadder", "appkit.qa", "appkit.selection", "appkit.textlist"]'|load_termite_components|safe }}
   <!-- *end_prunt_task* -->
   
   <script type="text/javascript">
