--- a/weapp/apps/customerized_apps/evaluate/templates/webapp/m_my_evaluates.html
+++ b/weapp/apps/customerized_apps/evaluate/templates/webapp/m_my_evaluates.html
@@ -71,7 +71,17 @@
         background-size: 380px 152px;
         background-position: -136px 0;
         margin: 0 auto;
-    }   
+    }  
+    .xui-text-ellipsis{
+        overflow : hidden;
+        text-overflow: ellipsis;
+        display: -webkit-box;
+        -webkit-line-clamp: 5;
+        -webkit-box-orient: vertical; 
+    }
+    .xui-businessReview{
+        border-bottom: 1px solid #e1e1e1;
+    }
 </style>
 {% endblock %}
 {% block content-panel %}
@@ -107,10 +117,11 @@
                 </div>
             </div>
         </div>
-        <div class="em10">
-            商家留言：
+        <div class="pb10 xui-businessReview">
+            <span class="em9">商家留言：</span>
+            <span class="em9 c65">奖励地址</span>
         </div>
-        <div class="xui-productReviewText c65 em8">
+        <div class="xui-productReviewText c65 em9 pt10 xui-text-ellipsis">
             {{review.detail}}
         </div>
         <!-- 如果有商品评价晒图-->
