--- a/weapp/apps/customerized_apps/evaluate/templates/editor/evaluates.html
+++ b/weapp/apps/customerized_apps/evaluate/templates/editor/evaluates.html
@@ -324,6 +324,10 @@ $(document).ready(function(){
             }
         });
     });
+
+    $('body').delegate('.xa-submit','click',function(){
+        alert(1111111111);
+    });
 })
 </script>
 {% endblock %}
